--- a/src/app.scss
+++ b/src/app.scss
@@ -8,8 +8,8 @@ html {
   margin: 0;
   box-sizing: border-box;
   font-family: "DM Sans", sans-serif;
+  scrollbar-width: thin;
 }
-
 
 body {
   background-color: #0c0c1d;
